Make it possible to re-call an XMLHttpRequest object from its onreadystate handler by clearing listeners before calling onreadystate, not after.  Bug 258768, r=doron, sr=jst